# cofy-server

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  nightly.yml
src/: config.rs  database.rs  http_parse.rs  listener.rs  main.rs
src/sql/: add_pkg.sql  setup.sql
