[package]
name = "cofy-server-rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/lunadevorg/cofy-server-rs"
rust-version = "1.70.0"

[dependencies]
anyhow = "1.0"
http = "1.1"
serde_json = "1.0"
log = "0.4"
tokio = { version = "1.37", features = ["macros", "net", "rt-multi-thread"] }
toml = "0.8"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["postgres", "runtime-tokio"]
